--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Chris West (Faux) <git@goeswhere.com>"]
 edition = "2018"
 
 [dependencies]
+cast = "0.2"
 chrono = "0.4"
 failure = "0.1"
 log = "0.4"
