--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ failure = "0.1"
 log = "0.4"
 pretty_env_logger = "0.2"
 reqwest = "0.9"
+rouille = "2.2"
 serde_json = "1"
 
 [dependencies.rusqlite]
