--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ chrono = "0.4"
 failure = "0.1"
 log = "0.4"
 pretty_env_logger = "0.2"
+r2d2 = "0.8"
+r2d2_sqlite = "0.7"
 reqwest = "0.9"
 rouille = "2.2"
 serde_json = "1"
