--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ chrono = "0.4"
 failure = "0.1"
 log = "0.4"
 pretty_env_logger = "0.4"
-reqwest = "0.9"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde_json = "1"
 
 [dependencies.rusqlite]
