--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Chris West (Faux) <git@goeswhere.com>"]
 edition = "2021"
 
 [dependencies]
+anyhow = "1"
 chrono = "0.4"
-failure = "0.1"
 log = "0.4"
 pretty_env_logger = "0.4"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
